Revert "fix token?"
This reverts commit 06b3523c40a4336030b0e165943d2b697d8f50cc.

--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           path: repo
           repository: cino86/ha-addons
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.HA_ADDONS_PAT }}
 
       - name: Update addon repo
         run: |
